Yay! My first commit. Added Ignored files.

--- a/Debug_day.html
+++ b/Debug_day.html
@@ -34,6 +34,18 @@
     <input id="confirm_password" type="password" name="confirm_password">
     <br>
 
+    <label for="email">Email</label>
+    <input id="email" type="email">
+    <br>
+
+    <label for="password">password</label>
+    <input id="password" type="password" name="password">
+    <br>
+
+    <label for="confirm_password">confirm password</label>
+    <input id="confirm_password" type="password" name="confirm_password">
+    <br>
+
     <h2>Filing Status</h2>
 
     <label for="single">
@@ -79,7 +91,6 @@
         Employed by a large business (> 50 employees)
     </label>
     <br>
-
     <h2><label for="phone_type">What kind of phone do you have</label></h2>
 
         <select id="phone_type" name="phone_type">
