--- a/Welcome.html
+++ b/Welcome.html
@@ -48,73 +48,73 @@
 
         <!-- End Navbar top -->
 
-
-        <div class="hover">
-            <h1>Welcome</h1>
-        </div>
-
-        <!-- Start of Carousel -->
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="http://placehold.it/500x300/ff0000/000000" alt="" style="width:100%">
-                    <div class="carousel-caption">
-                        <h3>Red</h3>
-                        <p>This is the first Picture.</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="http://placehold.it/500x300/00ff00/000000" alt="" style="width:100%">
-                    <div class="carousel-caption">
-                        <h3>Green</h3>
-                        <p>This is the second Picture.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img  src="http://placehold.it/500x300/0000ff/000000" alt="" style="width:100%">
-                    <div class="carousel-caption">
-                        <h3>Blue</h3>
-                        <p>This is the third picture</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="http://placehold.it/500x300/ff00ff/000000" alt="" style="width:100%">
-                    <div class="carousel-caption">
-                        <h3>Purple</h3>
-                        <p>This is the fourth Picture</p>
-                    </div>
-                </div>
+        <main>
+            <div class="hover">
+                <h1>Welcome</h1>
             </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+            <!-- Start of Carousel -->
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
 
-        <!-- Sroll to top Button-->
-        <div class="container">
-            <div class="row">
-                <a id="back-to-top" href="#top" class="btn btn-primary btn-lg back-to-top" role="button"><span class="glyphicon glyphicon-chevron-up"></span></a>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="http://placehold.it/500x300/ff0000/000000" alt="" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Red</h3>
+                            <p>This is the first Picture.</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="http://placehold.it/500x300/00ff00/000000" alt="" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Green</h3>
+                            <p>This is the second Picture.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img  src="http://placehold.it/500x300/0000ff/000000" alt="" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Blue</h3>
+                            <p>This is the third picture</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="http://placehold.it/500x300/ff00ff/000000" alt="" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Purple</h3>
+                            <p>This is the fourth Picture</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-        </div>
 
+            <!-- Sroll to top Button-->
+            <div class="container">
+                <div class="row">
+                    <a id="back-to-top" href="#top" class="btn btn-primary btn-lg back-to-top" role="button"><span class="glyphicon glyphicon-chevron-up"></span></a>
+                </div>
+            </div>
+        </main>
         <!-- Start of Footer-->
         <div style="padding-top: 1%">
             <footer>
