Created a sample form. Standardizing format, use <av><main><footer>.

--- a/My_First_HTML_Form.html
+++ b/My_First_HTML_Form.html
@@ -62,19 +62,19 @@
                             <option value="soccer">Soccer</option>
                             <option value="football">Football</option>
                             <option value="basketball" selected>Basketball</option>
-                        </select>d
+                        </select>
                     </label>
 
             </form>
             <form action="">
                 <h2>Select Testing</h2>
                 <p>
-                    <lable for="cake">Do you like cake?
-                        <select id="cake" name="cake[]" multiple>
+                    <label for="cake">Do you like cake?
+                        <select id="cake" name="cake[]">
                             <option value="1" selected>Yes</option>
                             <option value="0">No</option>
                         </select>
-                    </lable>
+                    </label>
 
                 </p>
 
