--- a/Pizza.html
+++ b/Pizza.html
@@ -4,23 +4,98 @@
     <meta charset="UTF-8">
     <title>Pizza Maker</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Disables Scaling on mobile devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <style>
-       /* insert some cool style here!
+       /* insert custom style here */
+
     </style>
 </head>
 <body>
-    <nav>
-        This is the NAV Bar
+    <nav class="navbar container">
+        <h6>This is the NAV Bar</h6>
     </nav>
 
-    <main>
+    <main class="container">
+
+        <h5>Uuummmm, this is a tasty burger!</h5>
+        <p class="lead">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.</p>
         <form>
             <!-- Creating a New Form from scratch -->
+            <h1>Pizza ordering form</h1>
+            <section class="row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 1</h4>
+                    <p class="text-left">Left aligned text.</p>
+                    <p class="text-center">Center aligned text.</p>
+                    <p class="text-right">Right aligned text.</p>
+                    <p class="text-justify">Justified text.</p>
+                    <p class="text-nowrap">No wrap text.</p>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 2</h4>
+                    <p class="text-lowercase">Lowercased text.</p>
+                    <p class="text-uppercase">Uppercased text.</p>
+                    <p class="text-capitalize">Capitalized text.</p>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 3</h4>
+                    <abbr title="attribute">attr</abbr>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 4</h4>
+                </div>
+            </section>
+            <section class="row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 1</h4>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 2</h4>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 3</h4>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <h4>Column 4</h4>
+                </div>
+            </section>
+            <!-- This is a nested column -->
+            <section class="row">
+                <div class="col-md-12"> Level 1
+                    <div class="row">
+                        <div class="col-md-6">Level 2 column 1</div>
+                        <div class="col-md-6">Level 2 column 2</div>
+                    </div>
+                </div>
+            </section>
         </form>
+        <legend class="col-md-12">Legend
+            <dl class="dl-horizontal">
+                <dt>First Definition Term</dt>
+                <dd>First Definition Descripion</dd>
+                <dt>Second Definition Term</dt>
+                <dd>Second Definition Descripion</dd>
+            </dl>
+        </legend>
     </main>
 
-    <footer>
-        <h2>THIS IS THE FOOTER</h2>
+    <footer class="container">
+        <h6 class="text-center">THIS IS THE FOOTER</h6>
+        <div class="col-md-6">
+            <address>
+                <strong>Full Name</strong><br>
+                <a href="mailto:#">first.last@example.com</a>
+            </address>
+        </div>
+        <div class="col-md-6">
+           <address class="text-right">
+               <strong>Twitter, Inc.</strong><br>
+               1355 Market Street, Suite 900<br>
+               San Francisco, CA 94103<br>
+               <abbr title="Phone">P:</abbr> (123) 456-7890
+           </address>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
