--- a/Resume.html
+++ b/Resume.html
@@ -153,9 +153,8 @@
                             <h3 class="panel-title">LIFE PHILOSOPHY</h3>
                         </div>
                         <div class="panel-body">
-                            <h4 class="lead"><em>"Be a yardstick of quality. Some people
-                                aren't used to an environment where
-                                excellence is expected."</em></h4>
+                            <h4 class="lead"><em>Making something is hard. Making something you
+                                don’t care about is even harder.</em></h4>
                         </div>
                     </div>
 
