--- a/Pizza.html
+++ b/Pizza.html
@@ -40,10 +40,46 @@
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <h4>Column 3</h4>
+                    <!-- This <abbr> attribute provides a hint for selected text-->
                     <abbr title="attribute">attr</abbr>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <h4>Column 4</h4>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>
+                                row 1 column 1 header
+                            </th>
+                            <th>
+                                row 1 column 2 header
+                            </th>
+                            <th>
+                                row 1 column 3 header
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                row 2 column 1
+                            </td>
+                            <td>
+                            row 2 column 2
+                            </td>
+                            <td>
+                                row 2 column 3
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                row 3 column 1
+                            </td>
+                            <td>
+                                row 3 column 2
+                            </td>
+                            <td>
+                                row 3 column 3
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </section>
             <section class="row">
@@ -97,10 +133,10 @@
            </address>
         </div>
     </footer>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+
 
 </body>
 </html>
