--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar" style="background-color:#6f16a1"></span>
                     <span class="icon-bar" style="background-color: #6f16a1"></span>
                     </button>
-                    <a href="Welcome.html" class="navbar-brand ." style="font-size: larger; font-family: 'Futura';
+                    <a href="../" class="navbar-brand ." style="font-size: larger; font-family: 'Futura';
                     color: #6f16a1; border: solid #6f16a1; padding: 10px; background-color: lightgray; float: left;">LtA</a>
                 </div>
                 <nav class="collapse navbar-collapse" id="bs-navbar">
