--- a/for_loop_js.html
+++ b/for_loop_js.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <script>
+        "use strict";
         for (var i = 1; i <= 10; i++) {
             var n = i.toString();
             if (i == 10) {
@@ -17,8 +18,8 @@
 
         var random = Math.floor(Math.random()* 10) + 1;
         for (var i = 1; i <= 10; i++) {
-        var sum = i * random;
-        console.log(random + "x" + i + "=" + sum);
+            var sum = i * random;
+            console.log(random + "x" + i + "=" + sum);
         }
 
 
@@ -27,7 +28,7 @@
             if (r % 2 == 0) {
                 console.log("Your random number " + r + " is even");
             }else {
-            console.log("your random number " + r + " is odd");
+                console.log("your random number " + r + " is odd");
             }
         }
 
